# selfupdate

./: .clang-format  BUILD.gn  SRCDEP.yaml
.github/workflows/: linux.yml  macos.yml  windows.yml  winxp.yml
include/selfupdate/: installer.h  selfupdate.h
sample/: old_client.cc
src/: BUILD.gn  common.cc  common.h  download.cc  install.cc  installer.cc  launch.cc  query.cc
src/client/: BUILD.gn  common.cc  common.h  download.cc  install.cc  installer.cc  launch.cc  native_string.h  query.cc
src/include/selfupdate/: installer.h  selfupdate.h
src/installer/: BUILD.gn  installer.cc  zip_installer.cc  zip_installer.h
src/sample/: BUILD.gn  new_client.cc  old_client.cc  run_server.py  test.py
src/server/: BUILD.gn  Dockerfile  go.mod  main.go
src/server/config/: package_config.go  sample_config.yaml
src/server/core/: processor.go  request.go  response.go  router.go
src/server/http/: server.go
src/server/router/: router.go
src/server/server/: server.go
src/server/version/: version.go  version_test.go
src/updater/: BUILD.gn  download.cc  install.cc  launch.cc  query.cc
test/: BUILD.gn  new_client.cc  old_client.cc
test/tools/: server.py  test.py
