static_library("selfupdate") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/selfupdate.h",
    "common.cc",
    "common.h",
    "download.cc",
    "install.cc",
    "launch.cc",
    "query.cc",
  ]

  public_deps = [ "../thirdparty:utility" ]
}

static_library("installer") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/installer.h",
    "common.cc",
    "common.h",
    "installer.cc",
  ]

  public_deps = [ "../thirdparty:utility" ]
}

group("src") {
  deps = [
    ":installer",
    ":selfupdate",
  ]
}
