static_library("selfupdate") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/selfupdate.h",
    "common.cc",
    "common.h",
    "download.cc",
    "install.cc",
    "launch.cc",
    "native_string.h",
    "query.cc",
  ]

  if (is_win) {
    libs = [ "libboost_program_options.lib" ]
  } else {
    libs = [ "boost_program_options" ]
  }

  deps = [
    "../../thirdparty:boost",
    "../utility:utility",
  ]
}

static_library("installer") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/installer.h",
    "common.cc",
    "common.h",
    "installer.cc",
  ]

  if (is_win) {
    libs = [ "libboost_program_options.lib" ]
  } else {
    libs = [ "boost_program_options" ]
  }

  deps = [
    "../../thirdparty:boost",
    "../../thirdparty:zlibwrap",
    "../utility:utility",
  ]
}
