static_library("selfupdate") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/selfupdate.h",
    "common.cc",
    "common.h",
    "download.cc",
    "install.cc",
    "launch.cc",
    "query.cc",
  ]

  deps = [
    "../../thirdparty:loki",
    "../../thirdparty:rapidjson",
    "../utility:utility",
  ]
}

static_library("installer") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  sources = [
    "../include/selfupdate/installer.h",
    "common.cc",
    "common.h",
    "installer.cc",
  ]

  deps = [
    "../../thirdparty:loki",
    "../../thirdparty:zlibwrap",
    "../utility:utility",
  ]
}
