source_set("installer") {
  if (is_posix) {
    cflags = [ "-Wno-deprecated-declarations" ]
  }
  include_dirs = [ "../../include" ]
  sources = [
    "../../include/selfupdate/installer.h",
    "common.h",
    "installer.cc",
    "zip_installer.cc",
    "zip_installer.h",
  ]

  public_deps = [ "../../thirdparty:utility" ]
}
