executable("old_client") {
  testonly = true

  include_dirs = [ "../include" ]

  sources = [ "old_client.cc" ]

  deps = [
    "../../thirdparty:boost",
    "../client:installer",
    "../client:selfupdate",
  ]
}

executable("new_client") {
  testonly = true

  sources = [ "new_client.cc" ]
}
