executable("old_client") {
  testonly = true
  if (is_win) {
    configs += [ "../../build/config/win:console_subsystem" ]
  }

  include_dirs = [ "../include" ]
  sources = [ "old_client.cc" ]

  deps = [
    "../client:installer",
    "../client:selfupdate",
  ]
}

executable("new_client") {
  testonly = true
  if (is_win) {
    configs += [ "../../build/config/win:console_subsystem" ]
  }

  include_dirs = [ "../include" ]
  sources = [ "new_client.cc" ]

  deps = [ "../client:selfupdate" ]
}
