action("server") {
  script = "go_build.py"
  args = [
    "-o",
    rebase_path(root_out_dir, "."),
    "-C",
    rebase_path(".", root_out_dir),
  ]
  if (is_debug) {
    args += [
      "-gcflags",
      "\"-N -l\"",
    ]
  } else {
    args += [
      "-ldflags",
      "\"-w -s\"",
    ]
  }

  sources = [
    "config/package_config.go",
    "core/processor.go",
    "core/request.go",
    "core/response.go",
    "core/router.go",
    "http/server.go",
    "main.go",
    "version/version.go",
    "version/version_test.go",
  ]

  if (is_win) {
    outputs = [ "$root_out_dir/selfupdate_server.exe" ]
  } else {
    outputs = [ "$root_out_dir/selfupdate_server" ]
  }
}
