golang("server") {
  go_root_dir = "."

  sources = [
    "config/package_config.go",
    "core/processor.go",
    "core/request.go",
    "core/response.go",
    "core/router.go",
    "http/server.go",
    "main.go",
    "version/version.go",
    "version/version_test.go",
  ]

  if (is_win) {
    go_outputs = [ "$root_out_dir/selfupdate_server.exe" ]
  } else {
    go_outputs = [ "$root_out_dir/selfupdate_server" ]
  }
}
